Change stylesheet reference in index.html
Updated stylesheet link from '00.css' to 'style.css'.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="00.jpg" class="icon">
 
-    <link rel="stylesheet" href="00.css">
+    <link rel="stylesheet" href="style.css">
     <title>osama alkeilani</title>
 </head>
 <body>
@@ -140,4 +140,5 @@
 
         </div>
 </body>
+
 </html>
