Fix HTML structure and update image references

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="https://www.youtube.com/channel/UC-YY_-dRh7I3kfavIpGYSRw" target="_blank" class="hireMe">My channel</a>
          </div>
         </div>
-        <img src="02.jpg" alt="hero image" class="heroImg">
+        <img src="hero.svg" alt="hero image" class="heroImg">
     </section>
 <br><br>
 
@@ -140,4 +140,5 @@
 
         </div>
 </body>
+
 </html>
