--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="00.jpg" class="icon">
 
     <link rel="stylesheet" href="style.css">
-    <title>osama alkeilani</title>
+    <title>Osama Alkeilani</title>
 </head>
 <body>
 
@@ -142,5 +142,6 @@
 </body>
 
 </html>
+
 
 
