--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="https://www.youtube.com/channel/UC-YY_-dRh7I3kfavIpGYSRw" target="_blank" class="hireMe">My channel</a>
          </div>
         </div>
-        <img src="Hero.svg" alt="hero image" class="heroImg">
+        <img src="02.jpg" alt="hero image" class="heroImg">
     </section>
 <br><br>
 
@@ -142,6 +142,7 @@
 </body>
 
 </html>
+
 
 
 
